--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~12.1.1",
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
+    "@capacitor-community/capacitor-googlemaps-native": "^1.1.3",
     "@capacitor/app": "1.0.3",
     "@capacitor/core": "3.2.3",
     "@capacitor/haptics": "1.0.3",
@@ -26,7 +27,7 @@
     "@capacitor/keyboard": "1.0.3",
     "@capacitor/status-bar": "1.0.3",
     "@ionic/angular": "^5.5.2",
-    "jwplayer-capacitor": "git+https://github.com/LineaDGroup/jwplayer-capacitor.git",
+    "jwplayer-capacitor": "git+https://github.com/andresdkm/jwplayer-capacitor.git",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
